# cad-copilot

./: .gitignore  .mcp.json  CLAUDE.md  PRD.md  README.md  pyproject.toml
debate/: SINTESIS-DEBATE.md  claude-response.md  codex-response.md  gemini-response.md
research/: mcp-cad-servers-analysis.md  mcp-repos-resumen.md
src/cad_copilot/blocks/: __init__.py  doors.py  fixtures.py  symbols.py  windows.py
src/cad_copilot/documenter/: __init__.py  auto_dimensions.py  norm_compliance.py  suggestions.py  title_block.py
src/cad_copilot/engine/: __init__.py  annotations.py  document.py  layout.py  norm_table.py  openings.py  renderer.py  spaces.py  walls.py
src/cad_copilot/mcp_server/: __init__.py  server.py
src/cad_copilot/reader/: __init__.py  analyzer.py  dimension_detector.py  opening_detector.py  space_detector.py  wall_detector.py
templates/: vivienda_simple.json
tests/: conftest.py  test_mcp_phase4.py  test_mcp_server.py
tests/blocks/: test_doors.py  test_windows.py
tests/documenter/: test_auto_dimensions.py  test_norm_compliance.py  test_suggestions.py  test_title_block.py
tests/engine/: test_annotations.py  test_document.py  test_openings.py  test_renderer.py  test_spaces.py  test_walls.py
tests/reader/: test_analyzer.py  test_detection_schemas.py  test_dimension_detector.py  test_opening_detector.py  test_space_detector.py  test_wall_detector.py
tests/schemas/: test_annotation.py  test_base.py  test_layout.py  test_opening.py  test_project.py  test_space.py  test_wall.py
tests/standards/: test_dimstyles.py  test_layers.py  test_norms.py
(+16 files in other folders)
