[project]
name = "cad-copilot"
version = "0.1.0"
description = "Copiloto CAD arquitectónico — genera planos 2D DXF desde JSON semántico"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ezdxf>=1.4",
    "mcp>=1.0",
    "pydantic>=2.0",
    "shapely>=2.0",
]

[project.scripts]
cad-copilot = "cad_copilot.engine.renderer:main"
cad-copilot-mcp = "cad_copilot.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cad_copilot"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]
